--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,104 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    max-width: 414px;
+    background-color: #E5E5E5;
+}
+
+.topo {
+    background-color: #CF2B2B;
+    width: 414px;
+    height: 92px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+}
+
+.topo h1 {
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 44px;
+    color: #FFFFFF;
+   
+}
+
+.topo h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+  
+}
+
+.prato-principal {
+    margin-top: 31px;
+}
+
+.titulo-div > h2 {
+    font-family: 'Righteous', cursive;
+    color: #333333;
+    font-size: 26px;
+    margin-left: 19px;
+}
+
+.lista-pratos {
+    display: flex;
+    flex-direction: row; 
+    overflow-x: scroll;
+}
+
+.pratos {
+    background-color: #FFFFFF;
+    width: 172px;
+    height: 216px;
+    margin-top: 17px;
+    margin-left: 19px;
+    border-radius: 9px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-items: center;
+    padding: 12px;
+}
+
+.pratos img {
+   width: 144px;
+   height: 87px;
+    
+}
+
+.nome-prato {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: #333333;
+}
+
+.pratos p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    color: #A6A6A6;
+}
+
+.preço {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+}
+
+.barra-bottom {
+    width: 414px;
+    height: 92px;
+    background-color: #FFFFFF;
+    position: fixed;
+    top: 90%;
+}
+
