--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ body {
     
 }
 
+
 .nome-prato {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
@@ -87,6 +88,10 @@ body {
     color: #A6A6A6;
 }
 
+.pratos h2 {
+    margin-right: 10px;
+}
+
 .preço {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -94,12 +99,46 @@ body {
     color: #000000;
 }
 
+.check {
+    display: none;
+    color: #32B72F;
+}
+
 .barra-bottom {
     width: 414px;
     height: 92px;
     background-color: #FFFFFF;
     position: fixed;
-    top: 90%;
+    top: 87.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.barra-bottom button {
+    border-radius: 50px;
+    width: 364px;
+    height: 61px;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #FFFFFF;
+    background-color: #CBCBCB;
+    border: none;
+    padding: 0 80px;
+}
+
+.botao-selecionado {
+    border-radius: 50px;
+    width: 364px;
+    height: 61px;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #FFFFFF;
+    background-color: #32B72F;
+    border: none;
+    padding: 0 80px;
 }
 
 .pudim {
@@ -127,19 +166,12 @@ body {
 }
 
 .borda-verde {
-    border:2px solid #32B72F; 
+    border:4px solid #32B72F;
     border-radius: 9px;
     outline:none; 
+    box-sizing: border-box;
 }
 
-.borda {
-    border:2px solid #32B72F; 
-    border-radius: 9px;
-    outline:none; 
-}
-
-.borda-green {
-    border:2px solid #32B72F; 
-    border-radius: 9px;
-    outline:none; 
+.escondido {
+    display: none;
 }
